# Dev_BBB_KbdMoal

./: CMakeLists.txt  CMakeSettings.json  CMakeSettings_linux.json  MyCodeMacros.cmake  MyGlobalImports.cmake  README.md
Documents/: 99-kbdmodal.rules  am335x_evm.sh  kbdmodal.service  keymap.txt  run-kbdmodal.sh  usbgadget-kbd-1.sh  usbgadget-kbd-2.sh  usbgadget-kbd.sh
Scratch/: hid-event.cpp  hid-example.c  hid-example.cpp
Test/: CMakeLists.txt
hid-event1/: CMakeLists.txt
hid-sample1/: CMakeLists.txt  hid-event.cpp  hid-example.c  hid-example.cpp
kbdmodal/: CMakeLists.txt  GadgetThread.cpp  GadgetThread.h  HidrawThread.cpp  KbdDefs.h  KbdThread.cpp  KbdThread.h  KbdTransform.cpp  KbdTransform.h  Main.cpp  MainInit.cpp
mytty1/: CMakeLists.txt  main.cpp
